src/test/ui/impl-trait/issue-57200.stderr
error: lifetimes in impl Trait types in bindings are not currently supported
  --> $DIR/issue-57200.rs:11:12
   |
LL |     let f: impl Fn(&'a T) -> &'b T = |x| x;
   |            ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

